<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/dashbord"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"

        />

    <EditText
        android:id="@+id/phonenum"
        android:layout_width="397dp"
        android:layout_height="57dp"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:hint="@string/input_phoneno"
        android:inputType="phone"
        android:padding="20dp"
        android:textColorHint="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="397dp"
        android:layout_height="57dp"
        android:inputType="textPassword"
        android:layout_below="@+id/phonenum"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:hint="@string/input_password"
        android:padding="20dp"
        android:textColorHint="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/password"
        android:layout_marginTop="5dp"
        >

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/remeber_me"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginLeft="17dp"
            />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="80dp"
            />


    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_1"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:padding="17dp"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        android:textSize="26sp" />


    <TextView
        android:id="@+id/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:text="@string/admin"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/not_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="11dp"
        android:text="@string/not_admin"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        />



</RelativeLayout>