<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashbord"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"

        />

    <EditText
        android:id="@+id/reg_username"
        android:layout_width="397dp"
        android:layout_height="57dp"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:hint="@string/reg_username"
        android:padding="20dp"
        android:textColorHint="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/reg_phone"
        android:layout_width="397dp"
        android:layout_height="57dp"
        android:layout_below="@+id/reg_username"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:hint="@string/reg_phone"
        android:inputType="phone"
        android:padding="20dp"
        android:textColorHint="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="397dp"
        android:layout_height="57dp"
        android:inputType="textPassword"
        android:layout_below="@+id/reg_phone"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:hint="@string/input_password"
        android:padding="20dp"
        android:textColorHint="@color/black"
        android:textStyle="bold" />


    <Button
        android:id="@+id/register"
        android:layout_width="341dp"
        android:layout_height="70dp"
        android:layout_below="@+id/reg_password"
        android:layout_alignParentEnd="true"

        android:layout_alignParentRight="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:background="@drawable/button"
        android:padding="2dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textSize="26sp" />


</RelativeLayout>