<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashbord"
    tools:context=".Main_Page">

    <ImageView

        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo" />

    <TextView

        android:id="@+id/theme_name"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="167dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="160dp"
        android:gravity="center_horizontal"
        android:text="@string/theme_name"
        android:textColor="@color/purple_700"
        android:textSize="22sp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/select_login"
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/rounded"
        android:padding="18dp"
        android:text="@string/select_login"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/select_join_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/select_login"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/rounded"
        android:padding="18dp"
        android:text="@string/select_join_now"
        android:textAllCaps="false"
        android:textSize="20sp" />


</RelativeLayout>